- AMB editor improvements
  - Allow file locations to be set manually in an INI file
  - Fix hotkeys not working and add Ctrl+O hotkey to open files
- Option to throttle AI's expansion by temporarily applying perfume to settlers each time it founds a city
  - Controlled by two settings named ai_settler_perfume_on_founding(_duration)
- Disallow trespassing setting kicks trespassers out of each player's territory at the start of their turn and after signing peace
- Fix empty army movement

* RELEASE 23 Preview 2
- AMB editor improvements
  - Show overall duration of loaded file
  - When playing preview, don't complain that empty WAV file names are missing
  - Create a new temp folder for each preview played and dispose of sound core objects when previews are stopped
    - These changes should fix issues where previews can't be played due to conflicts with leftover files
- Prevent airdrops from violating the trespassing restriction
- Fix possible crash when unit performing stack bombard is destroyed
- Fix division by zero in AI logic to evaluate proposed alliances

* RELEASE 23 PREVIEW 1
- Include AMB editor
- Adjustable rebase range as multiple of operational range, setting named rebase_range_multiplier
- Option not to draw capital cities larger than they really are, named do_not_make_capital_cities_appear_larger
- Fix city screen zooming out for adjacent tiles that aren't actually workable due to maximum work radius

* RELEASE 22
- Can adjust the size of the area cities can work
  - Setting named city_work_radius, standard radius is 2, can be set 1 - 7
  - work_area_limit option allows the workable areas to be limited based on cities' cultural levels
- Option do_not_unassign_workers_from_polluted_tiles (off by default)
- Fix AI players sometimes spawning nonsensical units when hitting a unit limit
- Pressing the Z key on the city screen toggles the zoom level of the map display

* RELEASE 21
- Allow perfume amounts to be specified as percentages