@@ -165,7 +165,7 @@ define,	   0x437540,	0x4390F0,	0x4375C0,	"Improvement_has_wonder_flag",			"bool 
 define,	   0x437710,	0x4392F0,	0x437790,	"UnitType_has_ai_strategy",			"bool (__fastcall *) (UnitType * this, int edx, byte n)"
 repl call, 0x431038,	0x432AE7,	0x4310B8,	"UnitType_has_strat_0_for_ai_prod",		""
 define,	   0x44CE50,	0x44EE40,	0x44CED0,	"Unit_find_transport",				"Unit * (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y)"
-define,	   0x5C5110,	0x5D3DF0,	0x5C4E20,	"Unit_load",					"void (__fastcall *) (Unit * this, int edx, Unit * transport)"
+inlead,	   0x5C5110,	0x5D3DF0,	0x5C4E20,	"Unit_load",					"void (__fastcall *) (Unit * this, int edx, Unit * transport)"
 define,	   0xA526BC,	0xA74EB4,	0xA5267C,	"p_human_player_bits",				"int *"
 define,	   0x5F8130,	0x6085D0,	0x5F8060,	"Sprite_draw_on_map",				"int (__fastcall *) (Sprite * this, int edx, Map_Renderer * map_renderer, int pixel_x, int pixel_y, int param_4, int param_5, int param_6, int param_7)"
 repl vptr, 0x66A554,	0x687660,	0x66A554,	"Map_Renderer_m19_Draw_Tile_by_XY_and_Flags",	"void (__fastcall *) (Map_Renderer * this, int edx, int param_1, int pixel_x, int pixel_y, Map_Renderer * map_renderer, int param_5, int tile_x, int tile_y, int param_8)"
@@ -702,6 +702,7 @@ define,	   0x565400,	0x571790,	0x5653B0,	"Leader_bounce_trespassing_units",		"vo
 inlead,    0x446840,	0x448650,	0x4468C0,	"Leader_begin_turn",				"void (__fastcall *) (Leader * this)"
 repl call, 0x5654AC,	0x571841,	0x56545C,	"Unit_is_visible_to_civ_for_bouncing",		""
 inlead,	   0x5025B0,	0x50C230,	0x502650,	"Leader_make_peace",				"void (__fastcall *) (Leader * this, int edx, int civ_id)"
+inlead,	   0x5C5BD0,	0x5D4970,	0x5C58E0,	"Unit_can_load",				"bool (__fastcall *) (Unit * this, int edx, Unit * passenger)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
