@@ -647,3 +647,8 @@ work_area_limit = none
 
 ; The maximum distance it's possible to rebase an aircraft equals its operational range times this value. For standard game rules, set to 6.
 rebase_range_multiplier = 6
+
+; This option prevents units from loading into two different transports on the same turn. Once a unit has been loaded into a transport, it becomes
+; tied to that transport for the remainder of the turn and cannot be loaded into any other. Loading into armies is not affected. The purpose of this
+; option is to make the galley chaining exploit impossible.
+limit_unit_loading_to_one_transport_per_turn = false
